# dox

./: .gitignore  .rusty-hook.toml  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  build.sh
.github/workflows/: cd.yml  ci.yml  client-ci.yml  core-ci.yml
client/: .gitignore  .metadata  .realdevice.env  .simulator.env  README.md  pubspec.yaml
client/android/app/: build.gradle  google-services.json
client/android/app/src/debug/: AndroidManifest.xml
client/android/app/src/main/: AndroidManifest.xml
client/android/app/src/main/kotlin/com/devzbysiu/dox/: MainActivity.kt
client/assets/: incorrect-file.json  splash-screen.json
client/integration_test/: app_test.dart  test_utils.dart
client/ios/Runner/: Info.plist
client/lib/: config.dart  document.dart  dox.dart  endpoints.dart  image.dart  main.dart  openable_image.dart  openable_image_list.dart  place.dart  search_input.dart  search_model.dart  urls.dart
client/lib/models/: app_state.dart  connection_state.dart  docs_model.dart  docs_state.dart  document.dart  search_model.dart
client/lib/screens/: home_page.dart  incorrect_file.dart  sign_in.dart  splash_screen.dart
client/lib/services/: connection_service.dart  doc_scan_service.dart  docs_service.dart  lifecycle_service.dart  scan_service.dart  sign_in_service.dart
client/lib/utilities/: api.dart  config.dart  connection.dart  dox_service.dart  events_stream.dart  exceptions.dart  filetype.dart  http.dart  log.dart  notifications_stream.dart  service_locator.dart  theme.dart  toasts.dart  urls.dart
client/lib/widgets/: add_button.dart  app_bar.dart  openable_document.dart  openable_image.dart  openable_image_list.dart  refreshable_documents.dart  scan_button.dart  scan_document_button.dart  search_input.dart  status_dot.dart
client/lib/widgets/add_button/: button.dart
client/lib/widgets/document/: document_viewer.dart  hero_image.dart  image_hero.dart  image_viewer.dart  incorrect_file_viewer.dart  openable_document.dart  pdf_viewer.dart  viewer_factory.dart
client/test/: initial_test.dart  utils.dart
client/test/utilities/: filetype_test.dart
client/test/widgets/: add_button_test.dart  search_input_test.dart  status_dot_test.dart
client/test/widgets/document/: viewer_factory_test.dart
client/web/: index.html
core/: .gitignore  Cargo.toml  Makefile.toml  Rocket.toml
core/src/: cfg.rs  error.rs  extension.rs  helpers.rs  index.rs  indexer.rs  main.rs  notifier.rs  ocr.rs  old_main.rs  prompt.rs  result.rs  server.rs  setup.rs  startup.rs  telemetry.rs  testingtools.rs  testutils.rs  thumbnail.rs  user_input.rs
core/src/configuration/: cfg.rs  factories.rs  mod.rs  new_main.rs  telemetry.rs
core/src/data_providers/: bus.rs  cipher.rs  config.rs  config_loader.rs  config_resolver.rs  event.rs  fs.rs  fs_watcher.rs  mod.rs  notifier.rs  persistence.rs  pipe.rs  prompt.rs  receiver.rs  repository.rs  server.rs  state.rs  thumbnail.rs  watcher.rs
core/src/data_providers/extractor/: image.rs  mod.rs  pdf.rs
core/src/data_providers/preprocessor/: '  image.rs  mod.rs  pdf.rs
core/src/data_providers/thumbnailer/: image.rs  mod.rs  pdf.rs
core/src/entities/: document.rs  extension.rs  extractor.rs  factory.rs  file.rs  location.rs  mod.rs  preprocessor.rs  thumbnail.rs
core/src/entities/user/: mod.rs  real.rs  test.rs
core/src/extractor/: image.rs  mod.rs  pdf.rs
core/src/preprocessor/: image.rs  mod.rs  pdf.rs
core/src/testingtools/: api.rs  app.rs  integration.rs  mod.rs  services.rs  unit.rs
core/src/testingtools/integration/: api.rs  app.rs  config.rs  mod.rs  services.rs
core/src/testingtools/services/: encrypter.rs  extractor.rs  fs.rs  indexer.rs  mod.rs  preprocessor.rs  repo.rs  state.rs  thumbnailer.rs
core/src/use_cases/: bus.rs  cipher.rs  config.rs  config_resolver.rs  encrypter.rs  event.rs  extractor.rs  fs.rs  indexer.rs  indexing_trigger.rs  mod.rs  notifier.rs  persistence.rs  pipe.rs  preprocessor.rs  receiver.rs  repository.rs  state.rs  thumbnail.rs  user.rs  watcher.rs
core/src/use_cases/extractor/: mod.rs
core/src/use_cases/preprocessor/: image.rs  mod.rs  pdf.rs
core/src/use_cases/services/: encrypter.rs  extractor.rs  indexer.rs  mod.rs  mover.rs  preprocessor.rs  thumbnailer.rs  watcher.rs
core/src/use_cases/user/: mod.rs  real.rs  test.rs
core/tests/: e2e.rs  testutils.rs
core/testutils/: Cargo.toml
core/testutils/src/: lib.rs
src/: cfg.rs  index.rs  main.rs  ocr.rs
tests/: e2e.rs
