# When releasing to crates.io:
#
# - last check for all TODO, FIXME, expect, unwrap.
# - re-read and final polish of documentation
# - run cargo udeps
# - run cargo clippy
# - recheck log statements (informative, none left that were just for development, ...)
# - Update CHANGELOG.md.
# - Update version numbers in Cargo.yml, Cargo.toml, install section of readme.
# - verify CI result
# - run cargo test on dependent crates
# - cargo publish
# - merge dev branch into master
# - create git tag with version number
#
[package]
name = "dox"
version = "0.1.0"
authors = ["Bartosz Zbytniewski <bartosz.zbytniewski.dev@gmail.com>"]
edition = "2018"
description = ""
repository = "https://github.com/devzbysiu/dox"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = []
categories = []
homepage = ""
documentation = ""

[dependencies]
tracing = { version = "0.1.33", features = ["log"] }
tracing-subscriber = { version = "0.3.0", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.2"
cooldown-buffer = { git = "https://github.com/devzbysiu/cooldown-buffer" }
notify = "4.0.17"
rayon = "1.5.1"
leptess = "0.13.2"
tantivy = "0.18.0"
dirs = "4.0.0"
rocket = { git = "https://github.com/SergioBenitez/Rocket/", tag = "v0.5.0-rc.1", features = [ "json" ] }
serde = "1.0.135"
toml = "0.5.8"
base64 = "0.13.0"
thiserror = "1.0.30"
pdf-extract = "0.6.3"
inquire = "0.2.1"
cairo-rs = { version = "0.15.10", features = ["png", "pdf"] }
poppler = "0.3.1"
tungstenite = "0.17.2"
once_cell = "1.10.0"
eventador = "0.0.18"
anyhow = "1.0.52"
retry = "1.3.1"
jwks-client = { git = "https://github.com/jfbilodeau/jwks-client" }
# rocket = { git = "https://github.com/jfbilodeau/Rocket", version = "0.5.0-dev"}

[dev-dependencies]
tempfile = "3.3.0"
ureq = { version = "2.5.0", features = ["json"] }
testutils = { path = "testutils" }
serial_test = "0.7.0"
