# When releasing to crates.io:
#
# - last check for all TODO, FIXME, expect, unwrap.
# - re-read and final polish of documentation
# - run cargo udeps
# - run cargo clippy
# - recheck log statements (informative, none left that were just for development, ...)
# - Update CHANGELOG.md.
# - Update version numbers in Cargo.yml, Cargo.toml, install section of readme.
# - verify CI result
# - run cargo test on dependent crates
# - cargo publish
# - merge dev branch into master
# - create git tag with version number
#
[package]
name = "dox"
version = "0.1.0"
authors = ["Bartosz Zbytniewski <bartosz.zbytniewski.dev@gmail.com>"]
edition = "2018"
description = ""
repository = "https://github.com/devzbysiu/dox"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = []
categories = []
homepage = ""
documentation = ""

[dependencies]
tracing = { version = "0.1.36", features = ["log"] }
tracing-subscriber = { version = "0.3.15", features = ["registry", "env-filter"] }
notify = "4.0.17"
rayon = "1.5.3"
leptess = "0.13.2"
tantivy = "0.18.0"
dirs = "4.0.0"
rocket = { version = "0.5.0-rc.2", features = [ "json" ] }
serde = "1.0.144"
toml = "0.5.9"
base64 = "0.13.0"
thiserror = "1.0.32"
pdf-extract = "0.6.4"
inquire = "0.4.0"
cairo-rs = { version = "0.15.12", features = ["png", "pdf"] }
poppler = "0.3.2"
tungstenite = "0.17.3"
once_cell = "1.13.1"
eventador = "0.0.18"
anyhow = "1.0.62"
retry = "2.0.0"
jwks-client = { git = "https://github.com/jfbilodeau/jwks-client" }
async-once-cell = "0.4.2"
dashmap = "5.2.0" # had to downgrade this because of conflicting versions with `claim` dep
chacha20poly1305 = { version = "0.10.1", features = ["std"] }
object = "0.29.0"
tracing-forest = "0.1.4"
fake = { version = "2.5.0", features = ["derive"] }
rand = "0.8.5"

[dev-dependencies]
tempfile = "3.3.0"
ureq = { version = "2.5.0", features = ["json"] }
serial_test = "0.9.0"
rand = "0.8.5"
claim = "0.5.0"
