[package]
name = "testutils"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = { version = "0.1.33", features = ["log"] }
tempfile = "3.3.0"
anyhow = "1.0.52"
# TODO: only serde stuff is needed from rocket, maybe it's better to use just serde?
rocket = { git = "https://github.com/SergioBenitez/Rocket/", tag = "v0.5.0-rc.1", features = [ "json" ] }
ureq = { version = "2.4.0", features = ["json"] }
toml = "0.5.8"
serde = { version = "1.0.136", features = ["derive"] }
rand = "0.8.5"
base64 = "0.13.0"
