[package]
name = "testutils"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = { version = "0.1.33", features = ["log"] }
tempfile = "3.3.0"
anyhow = "1.0.52"
# TODO: only serde stuff is needed from rocket, maybe it's better to use just serde?
rocket = { version = "0.5.0-rc.2", features = [ "json" ] }
ureq = { version = "2.4.0", features = ["json"] }
toml = "0.5.8"
serde = { version = "1.0.136", features = ["derive"] }
once_cell = "1.13.1"
rand = "0.8.5"
base64 = "0.13.0"
